# Kompressor

./: CHANGELOG.md  NOTICE  README.md  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yaml
build-logic/: settings.gradle.kts
build-logic/build-logic-kmp/: build.gradle.kts
gradle/: libs.versions.toml
jni/common/include/: DefaultLoad.h  SliceClass.h
jni/common/src/: DefaultLoad.cpp  SliceClass.cpp
kompressor-bom/: build.gradle.kts
kompressor-brotli--nativelib/: README.md  build.gradle.kts
kompressor-brotli--nativelib/src/androidMain/: CMakeLists.txt
kompressor-brotli--nativelib/src/jvmCommonMain/jni/: Wrapper.cpp
kompressor-brotli--nativelib/src/jvmMain/: build.zig
kompressor-brotli--nativelib/src/nativeMain/cinterop/: lib.def
kompressor-brotli-ktor/: README.md  build.gradle.kts
kompressor-core/: README.md  build.gradle.kts
kompressor-js/: README.md  build.gradle.kts
kompressor-kotlinx-io/: README.md  build.gradle.kts
kompressor-ktor/: build.gradle.kts
kompressor-test/: README.md  build.gradle.kts
kompressor-zlib--nativelib/: build.gradle.kts
kompressor-zlib--nativelib/src/jvmMain/: build.zig
kompressor-zlib--nativelib/src/nativeMain/cinterop/: lib.def
kompressor-zlib-ktor/: build.gradle.kts
kompressor-zstd/: README.md
kompressor-zstd--nativelib/: README.md  build.gradle.kts
kompressor-zstd--nativelib/src/androidMain/: CMakeLists.txt
kompressor-zstd--nativelib/src/jvmCommonMain/jni/: Wrapper.cpp
kompressor-zstd--nativelib/src/jvmMain/: build.zig
kompressor-zstd--nativelib/src/nativeMain/cinterop/: lib.def
kompressor-zstd-ktor/: build.gradle.kts
kompressor-zstd/src/jvmCommonMain/jni/: Wrapper.cpp
kompressor-zstd/src/jvmMain/: build.zig
(+63 files in other folders)
